## Process this file with automake to produce Makefile.in
#
# Makefile.am: Automake input file.
#
# Copyright (C) 2015 Julian Graham
#
# This is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# This software is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this package.  If not, see <http://www.gnu.org/licenses/>.
#

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src doc meta tests

dist_noinst_DATA = benchmarks/echo-chamber/README \
	benchmarks/echo-chamber/client.scm \
	benchmarks/echo-chamber/echo-chamber.sh \
	benchmarks/echo-chamber/game.xml benchmarks/echo-chamber/gzochid.conf \
	benchmarks/echo-chamber/server.scm
