## Process this file with automake to produce Makefile.in
#
# Makefile.am: Automake input file.
#
# Copyright (C) 2015 Julian Graham
#
# This is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# This software is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this package.  If not, see <http://www.gnu.org/licenses/>.
#

info_TEXINFOS = gzochid.texi

dvi: # do nothing for make dvi
pdf: # do nothing for make pdf
ps: # do nothing for make ps

gzochid_TEXINFOS = fdl.texi
man_MANS = gzochid.8 \
	gzochi-dump.1 \
	gzochi-load.1 \
	gzochi-migrate.1

EXTRA_DIST = ${man_MANS}
